# UDP-RECEIVER-WITH-LOGGING

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: UDP_LISTENER.cpp  UDP_LISTENER.h  configReader.h
src/logging/: NanoLog.cpp  NanoLog.hpp
